<resources>
    <string name="app_name">Mankind</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="med_call">MedCall</string>
    <string name="register">Register new member?</string>
    <string name="click_here">Click here</string>
    <string name="hint_full_name">Full Name</string>
    <string name="button_register">Register</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="medicine">Medicine</string>
    <string name="nav_symptom">Symptoms</string>
    <string name="nav_account">Account</string>
    <string name="nav_help">Help</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>
    <string name="openDrawer">drawer_open</string>
    <string name="closeDrawer">drawer_close</string>
    <string name="logout">Logout</string>
    <string name="exit_confirmation">Are you sure want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hint_search">Search..</string>
    <string name="recently_add">Recently add</string>
    <string name="tell_your_symptom">Tell your symptom..</string>
    <string name="button_submit">Submit</string>
    <string name="tell_symptom_us">Tell your Symptoms to us</string>
</resources>
