<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mankind.app.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/padding_left_right"
        android:paddingRight="@dimen/padding_left_right">

        <com.mankind.app.base.view.BaseImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/medicine"
            android:layout_gravity="center"/>

        <com.mankind.app.base.view.BaseTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/text"
            android:text="@string/med_call"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"/>

        <com.mankind.app.base.view.BaseTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text_low"
            android:text="@string/text_lorem_ipsum"
            android:gravity="center"
            android:paddingBottom="20dp"/>

        <android.support.v7.widget.CardView
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mankind.app.base.view.BaseEditText
                style="@style/EditTextInput"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:inputType="text"
                android:hint="@string/hint_username"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mankind.app.base.view.BaseEditText
                android:id="@+id/et_password"
                style="@style/EditTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>

        </android.support.v7.widget.CardView>

        <com.mankind.app.base.view.BaseButton
            android:id="@+id/btn_login"
            style="@style/ButtonYellowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.mankind.app.base.view.BaseTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_low"
                android:text="@string/register"
                android:gravity="center"/>

            <com.mankind.app.base.view.BaseTextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/click_here"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
