<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp">

        <com.mankind.app.base.view.BaseTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>


        <com.mankind.app.base.view.BaseTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/exit_confirmation"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <com.mankind.app.base.view.BaseTextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/no"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <com.mankind.app.base.view.BaseTextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/yes"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>