<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mankind.app.register.RegisterActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_arrow_back"
        android:padding="@dimen/button_icon_padding"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_below="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left_right"
        android:paddingRight="@dimen/padding_left_right">

        <com.mankind.app.base.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:text="@string/register"
            android:layout_gravity="center"
            android:paddingBottom="20dp"/>

        <android.support.v7.widget.CardView
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mankind.app.base.view.BaseEditText
                style="@style/EditTextInput"
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:inputType="text"
                android:hint="@string/hint_full_name"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mankind.app.base.view.BaseEditText
                style="@style/EditTextInput"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:inputType="text"
                android:hint="@string/hint_username"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mankind.app.base.view.BaseEditText
                android:id="@+id/et_password"
                style="@style/EditTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>

        </android.support.v7.widget.CardView>

        <com.mankind.app.base.view.BaseButton
            android:id="@+id/btn_register"
            style="@style/ButtonYellowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</RelativeLayout>
